axion-ui/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: axion-ingress
  namespace: axion
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: /devices

spec:
  ingressClassName: azure-application-gateway

  rules:

    # Frontend
    - host: axion.rishikesharma.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-ui-service
                port:
                  number: 80

    # Backend
    - host: backend.rishikesharma.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-query-service
                port:
                  number: 8000
